test/spec_vectors/local_get/fail/module_11.wat
(module (func $unbound-local (local i32 i64) (local.get 3) drop))